# Wolfy-Engine

./: .gitmodules  CMakeLists.txt  README.md  config.h  main.cpp
Assets/Levels/: ai_level.json  among_us.json  l.json  test_level.json
Engine/Local/: tr.json
EngineAssets/Local/: en.json  pl.json  tr.json
Headers/Engine/: GameTime.h  InputManager.h  InputManager.hpp
Headers/Engine/Local/: Local.hpp
Headers/Launcher/: LauncherApp.hpp
Headers/Map/: MapQueries.h
Headers/MapEditor/: MapEditor.hpp
Headers/Math/: Vector.h
Headers/Math/Geometry/: Geometry.hpp
Headers/Math/Matrix/: Matrix4.h
Headers/Math/Vector/: Vector2.h  Vector2Math.h  Vector2Math.hpp  Vector3.h  Vector4.h
Headers/Objects/: Components.hpp  Entity.hpp  EntityTypes.hpp  Level.hpp  Loadables.hpp  Object.h  Object.hpp  Player.h  Player.hpp  Sector.h  Sector.hpp  Wall.h
Headers/Project/: ProjectManager.hpp
Headers/Renderer/: MapEditor.h  MapEditor.hpp  Renderer.h  Shader.h
Headers/Renderer/Renderer/: Renderer.hpp  RendererInternal.hpp
Headers/Runtime/: RuntimeSession.hpp  ScriptSystem.hpp
Headers/Runtime/Renderer/: Shader.hpp  TextureManager.hpp
Headers/Runtime/Renderer/Renderer/: Renderer.hpp
Headers/Runtime/Sound/: AudioSystem.hpp  SoundManager.hpp
Shaders/: debug.fs.glsl  debug.vs.glsl  vertex.vs.glsl  wallColoring.fs.glsl  wallProjection.vs.glsl
Shaders/Background/: Background.fs.glsl  Background.vs.glsl
Shaders/Rendering/: Rendering.fs.glsl  Rendering.vs.glsl
Shaders/Wall/: wallColoring.fs.glsl  wallProjection.vs.glsl
docs/: localization_guide.md
glad/include/glad/: glad.h
glad/src/: glad.c
resources/: WolfyIcon.rc
src/Core/: Locilasation.cpp
src/Editor/: EditorSaveLoad.cpp
src/Engine/: GameTime.cpp  InputManager.cpp
src/Engine/Local/: Local.cpp
src/EngineApp/: EngineMain.cpp
src/Launcher/: LauncherApp.cpp  LauncherMain.cpp
src/Map/: MapQueries.cpp
src/MapEditor/: MapEditor.cpp  MapEditorDrawing.cpp  MapEditorGeometry.cpp  MapEditorInput.cpp  MapEditorInternal.hpp  MapEditorSaveLoad.cpp  MapEditorState.cpp  MapEditorUI.cpp
src/Math/Geometry/: Geometry.cpp
src/Objects/: Entity.cpp  Player.cpp
src/Project/: ProjectManager.cpp
src/Renderer/: MapEditor.cpp  Renderer.cpp  TextureManager.cpp
src/Renderer/MapEditor/: MapEditor.cpp  MapEditorDrawing.cpp  MapEditorGeometry.cpp  MapEditorInput.cpp  MapEditorInternal.hpp  MapEditorSaveLoad.cpp  MapEditorState.cpp  MapEditorUI.cpp
src/Renderer/Renderer/: RenderBackground.cpp  RendererDebug.cpp  RendererDecals.cpp  RendererDestroy.cpp  RendererInit.cpp  RendererInternal.hpp  RendererMapBuild.cpp  RendererMath.cpp  RendererSectors.cpp  RendererSprites.cpp  RendererState.cpp  RendererText.cpp  RendererUpdate.cpp
src/Runtime/: RuntimeSession.cpp  ScriptSystem.cpp
src/Runtime/Renderer/: TextureManager.cpp
src/Runtime/Renderer/Renderer/: RenderBackground.cpp  RendererDebug.cpp  RendererDestroy.cpp  RendererInit.cpp  RendererInternal.hpp  RendererMapBuild.cpp  RendererSectors.cpp  RendererSprites.cpp  RendererState.cpp  RendererText.cpp  RendererUI.cpp  RendererUpdate.cpp
src/Runtime/Sound/: AudioSystem.cpp  SoundManager.cpp
